test/conformance/chainsaw/deleting-policies/delete-pod-by-namespaceObject/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    environment: test
