test/conformance/chainsaw/deleting-policies/delete-pod-by-namespaceObject/pods.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-nginx
  namespace: test
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
