test/conformance/chainsaw/deleting-policies/delete-pod-by-namespaceObject/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: DeletingPolicy
metadata:
  name: cleanup-old-test-pods
spec:
  conditions:
    - expression: has(namespaceObject.metadata.labels) && has(namespaceObject.metadata.labels.environment) && namespaceObject.metadata.labels.environment == 'test'
      name: is-test-namespace
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
  schedule: '*/1 * * * *'
