test/conformance/chainsaw/deleting-policies/delete-pod-by-namespaceObject/pod-assert.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
