test/conformance/chainsaw/deleting-policies/delete-pod-by-namespaceObject/pod-error.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-nginx
  namespace: test
spec:
  containers:
  - name: nginx
    image: nginx:latest
