test/conformance/chainsaw/deleting-policies/delete-pod-by-namespaceObject/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: delete-pod-by-namespaceobject
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: rbac.yaml
  - name: step-02
    try:
    - apply:
        file: namespace.yaml
  - name: step-03
    try:
    - apply:
        file: pods.yaml
  - name: step-04
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-05
    try:
    - sleep:
        duration: 1m5s
  - name: step-06
    try:
    - error:
        file: pod-error.yaml
  - name: step-07
    try:
    - assert:
        file: pod-assert.yaml
